# pegasus-soma

./: Makefile.in  Makeoptions.in  README.md  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
doc/: driving.txt  firehose 2.txt  firehose 3.txt  firehose.txt
doc/.svn/: all-wcprops  entries
src/: Makefile.in  baton.c  bvals_mhd.c  cc_pos.c  copyright.h  defs.h  defs.h.in  dump_history.c  dump_vtk.c  globals.h  init_grid.c  init_mesh.c  main.c  new_dt.c  output.c  output_vtk.c  par.c  peg_array.c  peg_dt.c  peg_files.c  peg_log.c  peg_signal.c  pegasus.h  problem.c  prototypes.h  restart.c  show_config.c  utils.c
src/integrators/: Makefile.in  integrate.c  integrate_1d_hybrid.c  integrate_2d_hybrid.c  integrate_3d_hybrid.c  prototypes.h
src/particles/: Makefile.in  bvals_particle.c  dist_func.c  exchange.c  init_particle.c  integrators_particle.c  output_particle.c  particle.h  prototypes.h  utils_particle.c
src/prob/: README  converge.c  cpaw1d.c  cpaw2d.c  cpaw3d.c  firehose1d.c  gyrate.c  ionacoustic1d.c  kh2d.c  landau.c  mirror.c  mirror2d.c  mri.c  mri2d.c  pegkh.c  shock.c  shock2d.c  shwave.c  shwave3d.c
tst/: peginput.advect  peginput.barnes  peginput.converge  peginput.cpaw1d  peginput.cpaw2d  peginput.cpaw3d  peginput.fhshear  peginput.firehose  peginput.firehose1d  peginput.gyrate  peginput.iaw  peginput.landau  peginput.mirror  peginput.mri  peginput.mri2d  peginput.mri2dlowres  peginput.pegkh  peginput.shock  peginput.test  peginput.turb
utils/: ascii_to_bin.m  average_column.c  calc_Bgrowthrates.m  calc_E.m  calc_rateofstrain.m  calc_scattering.m  calc_scattering_mu.m  calc_scattering_smooth.m  calc_scattering_vpar.m  clean_hist.c  spec_to_gnuplot.c  spec_to_growth.m
vis/idl/.svn/: all-wcprops  entries
vis/matlab/: B_slice.m  B_spectrum.m  N_spectrum.m  PDF.m  V_spectrum.m  calc_spectrum.m  cross.m  dist_spec.m  doit.m  doit_all.m  dot.m  dyad.m  forcing.m  init_grid.m  landau.m  larmor_radius.m  mri2d.m  mri3d.m  mucons.m  nueff.m  paniso.m  peg_fhmrshear.m  peg_readhst.m  peg_readvtk.m  print_1D_PDF.m  print_2D_PDF.m  rateofstrain.m  readvtk.m  rhoBCJ.m  scattering.m  shock2d.m  wavenumbers.m  whistler.m
vis/matlab/.svn/: all-wcprops  entries
vis/matlab/join_bin/.svn/: all-wcprops  entries
vis/palettes/: README  YlGnBu.plt  bluered.plt  hawley.plt  inYlGnBu.plt  parula.plt  rainbow.plt
vis/particle/: Read_par_standard.m  join_lis  join_lis.c  par_motion_movie.m
vis/particle/.svn/: all-wcprops  entries
vis/python/: insert_output.py  insert_output_parallel.py  pegasus_read.py
vis/python/.svn/: all-wcprops  entries
vis/sm/.svn/: all-wcprops  entries
vis/vtk/: join.sh  join_all.sh
vis/vtk/.svn/: all-wcprops  entries
vis/vtkreader-DSO/: B_slice.c  fieldline.c  main.c  read_vtk.c  read_vtk.h  slice.c  structure.c  structure_l.c  utils.c  utils.h
vis/vtkreader-spectrum/: Makefile.in  aclocal.m4  configure  configure.ac  snoopy.cfg  vtkreader
vis/vtkreader-spectrum/autom4te.cache/: output.0  requests  traces.0
vis/vtkreader-spectrum/src/: common.c  common.h  debug.c  debug.h  error.c  error.h  gfft.c  gfft.h  gvars.h  output.c  output.h  read_config.c  read_config.h  shear.c  shear.h  snoopy.h  transpose.c  transpose.h  vtkreader.c
vis/vtkreader-spectrum/src/libconfig/: libconfig.c  scanner.c  scanner.h
vis/vtkreader-spectrum/src/problem/default/: gvars.h  snoopy.cfg
